sumo/tests/sumo/extended/emitter/errors/routedist/empty_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: Attribute 'probability' for route '1' is not given.
Quitting (on error).
